{
    "name": "PlayerActionController",
    "maps": [
        {
            "name": "PlayerBodyController",
            "id": "0215a7f0-bd9d-448d-976b-95971f16ed5e",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "6621a975-a6b7-4c48-85e4-67c122297aa7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "e149ca5d-6ac5-486e-bc7d-1379cc9652c7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BasicSkill",
                    "type": "Button",
                    "id": "8a709a29-c533-4b76-82f6-70bf32471b03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "SpecialSkill",
                    "type": "PassThrough",
                    "id": "3cc52d2d-c894-48ee-a06f-339365079e73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "UltimateSkill",
                    "type": "PassThrough",
                    "id": "9954bcdd-b22a-4750-bff9-e10a047f86db",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "OpenInventory",
                    "type": "Button",
                    "id": "08a85fd9-d117-4959-86e7-e965398acbfe",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "3ab6d7bc-4656-45a6-840b-a8024992ee7f",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "2eb8d8fa-c818-494b-96af-356d0158523b",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "698895a5-c62d-461b-9e3d-2f7d60e3f645",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "bfe771f0-e2ae-4456-bf36-f2cebeb54059",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9ecea8c1-a19f-4d4d-9765-a06d3bf69915",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "d54b4269-8606-4f8c-a00d-e217f1643072",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Keybord",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Keybord",
            "bindingGroup": "Keybord",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Mobile",
            "bindingGroup": "Mobile",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}